fixed bullet points not appearing and set the scrollbar to appear

--- a/static/css/custom_css.css
+++ b/static/css/custom_css.css
@@ -1978,9 +1978,9 @@ div.alert a {
 /* Hides scrollbar for Chrome and IE (probably works in Safari and possibly other browsers but not Firefox)*/
 
 
-::-webkit-scrollbar { 
+/*::-webkit-scrollbar { 
     display: none; 
-}
+}*/
 
 
 .docs-sidebar {
